# assoluto

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.placeholder  NOTICE.md  README.md  SECURITY.md  alembic.ini  babel.cfg  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  tailwind.config.js
.claude/agents/: backend-auditor.md  business-auditor.md  security-auditor.md  ux-auditor.md
.claude/commands/: audit-fix.md  audit-verify.md  audit.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-production.yml  release.yml  uptime.yml
app/: __init__.py  config.py  deps.py  i18n.py  i18n_messages.py  logging.py  main.py  scheduler.py  templating.py  urls.py
app/db/: __init__.py  base.py  session.py
app/email/: __init__.py  sender.py
app/locale/: messages.pot
app/models/: __init__.py  asset.py  attachment.py  audit_event.py  customer.py  enums.py  mixins.py  order.py  product.py  tenant.py  user.py
app/platform/: __init__.py  deps.py  models.py  service.py  session.py  usage.py  validation.py
app/routers/: assets.py  attachments.py  customers.py  dashboard.py  health.py  me.py  orders.py  products.py  public.py  search.py  tenant_admin.py  www.py
app/security/: __init__.py  contact_filter.py  csrf.py  email_throttle.py  head_method.py  headers.py  locale.py  log_context.py  passwords.py  rate_limit.py  session.py  tokens.py
app/services/: __init__.py  asset_service.py  attachment_service.py  audit_service.py  auth_service.py  customer_permissions.py  customer_service.py  gdpr_service.py  invoice_pdf_service.py  locale_service.py  notification_service.py  order_service.py  pdf_service.py  product_service.py  search_service.py  sla_service.py
app/storage/: __init__.py  s3.py
app/tasks/: __init__.py  email_tasks.py  periodic.py  thumbnail_tasks.py
app/templates/: _breadcrumbs.html  _csrf.html  _flash.html  _logo.html  _palette.html  _palette_results.html  app_base.html  base.html  (+1 more)
docker/: Caddyfile  Dockerfile.caddy  entrypoint.sh  nginx.conf.example  postgres-init.sql
docs/: ARCHITECTURE.md  AUDIT_PIPELINE.md  BACKUP_RESTORE.md  DEPLOY_HETZNER.md  DEPLOY_RAILWAY.md  DEPLOY_SAAS.md  ENV.md  LAUNCH_CHECKLIST.md  OPERATOR_PLAYBOOK.md  PRELAUNCH_REVIEW_2026-04-25.md  SELF_HOST.md
migrations/: env.py
scripts/: backup.sh  build_tailwind.sh  create_tenant.py  make_platform_admin.py  seed_dev.py
tests/: conftest.py  test_activity_feed.py  test_admin_dashboard.py  test_admin_flow.py  test_admin_users_crud.py  test_assets.py  test_attachments_flow.py  test_audit_hooks.py  test_audit_rls.py  test_audit_service.py  test_audit_transaction_atomicity.py  test_auth_routes.py  test_auth_state_redirects.py  test_billing.py  test_billing_details.py  test_catalog.py  test_contact_filter.py  test_cross_tenant_session_redirect_loop.py  test_cs_catalog_health.py  test_csrf.py  test_customer_admin_flow.py  test_deps.py  test_email.py  test_email_throttle.py  test_error_handlers.py  test_gdpr.py  test_head_method.py  test_healthz.py  test_i18n.py  test_locale_service.py  test_models_smoke.py  test_notifications_flow.py  test_option_a_cancel_flow.py  test_orders_bulk_transition.py  test_orders_export.py  test_orders_filters.py  test_orders_flow.py  test_orders_item_autosave.py  test_orders_pdf.py  test_orders_state_machine.py  (+20 more)
(+162 files in other folders)
