[project]
name = "sme-client-portal"
version = "0.1.0"
description = "Customer portal for manufacturing SMEs: orders, catalog, client-owned assets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "4MEX" }]
keywords = ["fastapi", "multi-tenant", "saas", "manufacturing", "portal", "sme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    # Templating
    "jinja2>=3.1",
    "jinja2-fragments>=1.4",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    # Validation / settings
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "email-validator>=2.2",
    # Logging
    "structlog>=24.4",
    # Security
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "segno>=1.6",
    # Scheduler (no Redis in MVP)
    "apscheduler>=3.10,<4",
    # Storage
    "boto3>=1.35",
    "pillow>=11",
    # Misc
    "python-slugify>=8.0",
    "httpx>=0.27",
    # i18n
    "babel>=2.16",
    # Billing (optional at runtime — methods no-op in demo mode when
    # STRIPE_SECRET_KEY is unset).
    "stripe>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "respx>=0.21",
    "moto[s3]>=5.0",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --------------------------------------------------------------------------
# Ruff
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF",
]
ignore = [
    "E501", # line length handled by formatter
    "B008", # FastAPI uses function calls in defaults (Depends, Query)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

# --------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]

# --------------------------------------------------------------------------
# Mypy
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations/versions", "tests"]
